[package]
name = "tempstat"
version = "0.0.0-SNAPSHOT"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
humantime = "2"
log = "0.4"
rumqttc = { version = "0.24", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serialport = { version = "4", default-features = false }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
